package com.job.designpattern.visitor;

public abstract class Action {

    public abstract void getManConclusion(Man man);

    public abstract void getWomanConclusion(Woman woman);


}
