package com.job.designpattern.visitor;

public abstract class Person {

    public abstract void accept(Action action);
}
